<resources>
    <string name="app_name">tomasz.jarosz</string>
    <string name="btnText1">red</string>
    <string name="btnText2">blue</string>
    <string name="btnText3">green</string>
    <string name="btnText4">orange</string>
    <string name="btnText5">purple</string>
    <string name="btnText6">pink</string>
    <string name="btnText7">yellow</string>
    <string name="btnText8">black</string>
    <string name="btnText9">white</string>
    <string name="loginText">Email: </string>
    <string name="passText">Password: </string>
    <string name="btnLogInText">Login</string>
    <string name="btnLogOutText">Wyloguj</string>
</resources>
